kernel/tests/ui/fail_spec_new_wrong_sig.stderr
error[E0277]: the trait bound `extern "C" fn(u32) -> ! {body_fn}: EntryPointFn` is not satisfied
  --> tests/ui/fail_spec_new_wrong_sig.rs:18:55
   |
18 |     let _spec = kernel::partition::PartitionSpec::new(body_fn, 0);
   |                 ------------------------------------- ^^^^^^^ the trait `EntryPointFn` is not implemented for fn item `extern "C" fn(u32) -> ! {body_fn}`
   |                 |
   |                 required by a bound introduced by this call
   |
help: the following other types implement trait `EntryPointFn`
  --> $WORKSPACE/rtos-traits/src/partition.rs
   |
   | impl EntryPointFn for PartitionEntry {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `extern "C" fn() -> !`
...
   | impl EntryPointFn for PartitionBody {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `extern "C" fn(u32) -> !`
note: required by a bound in `PartitionSpec::new`
  --> $WORKSPACE/rtos-traits/src/partition.rs
   |
   |     pub fn new(entry_point: impl EntryPointFn, r0: u32) -> Self {
   |                                  ^^^^^^^^^^^^ required by this bound in `PartitionSpec::new`
